[package]
name = "edict2"
version = "0.1.0"
edition = "2021"

[lib]
name = "edict2"
# NOTE: adding cdylib as a crate-type degrades performance significatively;
# this might be related to https://github.com/rust-lang/cargo/issues/2301;
# however, this produced binary is of the expected size
crate-type = ["cdylib", "lib"]

[dependencies]
lazy_static = "1.4.0"
ouroboros = "0.18.1"
regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
tracing = "0.1.40"
