[package]
name = "nhkeasier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", default-features = false }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros", "chrono"], default-features = false }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt"] }
