[package]
name = "nhkeasier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", default-features = false, features = ["http1", "tokio"] }
edict2 = { version = "0.1.0", path = "../edict2" }
http-body-util = "0.1.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros", "chrono"], default-features = false }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
