[package]
name = "nhkeasier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", default-features = false, features = ["http1", "tokio", "query", "form", "tracing"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
dotenvy = "0.15.7"
edict2 = { version = "0.1.0", path = "../edict2" }
lazy_static = "1.4.0"
lettre = { version = "0.11.2", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder", "tracing"] }
libxml = "0.3.3"
regex = { version = "1.10.2", default-features = false, features = ["perf", "std"] }
reqwest = "0.11.23"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros", "chrono"], default-features = false }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "catch-panic", "trace"] }
tracing = "0.1.40"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
